# snowflake-template

./: .gitignore  README.md  config.py.sample  pyproject.toml  rsa_key.pub  scratch.ipynb
.github/workflows/: build_and_deploy.yaml
procedure/: process.py
utils/: get_session.py
